rust/cube/cubesqlplanner/cubesqlplanner/src/tests/integration/snapshots/cubesqlplanner__tests__integration__modifiers__limit_with_offset.snap
---
source: cubesqlplanner/src/tests/integration/modifiers.rs
expression: result
---
orders__status | orders__count
---------------+--------------
completed      | 5            
pending        | 3
