rust/cube/cubesqlplanner/cubesqlplanner/src/tests/integration/snapshots/cubesqlplanner__tests__integration__modifiers__order_by_measure_only.snap
---
source: cubesqlplanner/src/tests/integration/modifiers.rs
expression: result
---
orders__status | orders__count
---------------+--------------
completed      | 5            
pending        | 3            
cancelled      | 1
