rust/cube/cubesqlplanner/cubesqlplanner/src/tests/integration/snapshots/cubesqlplanner__tests__integration__modifiers__order_by_time_dimension.snap
---
source: cubesqlplanner/src/tests/integration/modifiers.rs
expression: result
---
orders__created_at_month | orders__count
-------------------------+--------------
2024-04-01 00:00:00      | 1            
2024-03-01 00:00:00      | 3            
2024-02-01 00:00:00      | 2            
2024-01-01 00:00:00      | 3
