rust/cube/cubesqlplanner/cubesqlplanner/src/tests/integration/snapshots/cubesqlplanner__tests__integration__modifiers__ungrouped_multi_fact.snap
---
source: cubesqlplanner/src/tests/integration/modifiers.rs
expression: result
---
customers__name | orders__count | returns__count
----------------+---------------+---------------
Alice           | 1             | 1             
Alice           | 1             | 1             
Alice           | 1             | 1             
Alice           | 1             | 1             
Bob             | 1             | 1             
Bob             | 1             | 1             
Bob             | 1             | 1             
Bob             | 1             | 1             
Bob             | 1             | 1             
Bob             | 1             | 1             
Charlie         | NULL          | 1             
Charlie         | NULL          | 1             
Diana           | 1             | NULL
