rust/cube/cubesqlplanner/cubesqlplanner/src/tests/integration/snapshots/cubesqlplanner__tests__integration__modifiers__ungrouped_multiplied_keeps_group_by_for_aggregate_sql_measure.snap
---
source: cubesqlplanner/cubesqlplanner/src/tests/integration/modifiers.rs
expression: result
---
dup_customers__name | dup_orders__status | dup_customers__ltv_agg_number
--------------------+--------------------+------------------------------
dup                 | new                | 150.00
