rust/cube/cubesqlplanner/cubesqlplanner/src/tests/integration/snapshots/cubesqlplanner__tests__integration__modifiers__ungrouped_single_cube.snap
---
source: cubesqlplanner/src/tests/integration/modifiers.rs
expression: result
---
orders__status | orders__amount | orders__count
---------------+----------------+--------------
completed      | 100.00         | 1            
completed      | 200.00         | 1            
pending        | 50.00          | 1            
completed      | 300.00         | 1            
cancelled      | 25.00          | 1            
completed      | 150.00         | 1            
pending        | 75.00          | 1            
completed      | 500.00         | 1            
pending        | 40.00          | 1
