rust/cube/cubesqlplanner/cubesqlplanner/src/tests/integration/snapshots/cubesqlplanner__tests__integration__modifiers__ungrouped_with_filter.snap
---
source: cubesqlplanner/src/tests/integration/modifiers.rs
expression: result
---
orders__id | orders__status | orders__amount | orders__count
-----------+----------------+----------------+--------------
1          | completed      | 100.00         | 1            
2          | completed      | 200.00         | 1            
4          | completed      | 300.00         | 1            
6          | completed      | 150.00         | 1            
8          | completed      | 500.00         | 1
