rust/cube/cubesqlplanner/cubesqlplanner/src/tests/integration/snapshots/cubesqlplanner__tests__integration__modifiers__ungrouped_with_join.snap
---
source: cubesqlplanner/src/tests/integration/modifiers.rs
expression: result
---
orders__status | orders__amount | customers__name | orders__count
---------------+----------------+-----------------+--------------
completed      | 100.00         | Alice Johnson   | 1            
completed      | 200.00         | Alice Johnson   | 1            
pending        | 50.00          | Bob Smith       | 1            
completed      | 300.00         | Bob Smith       | 1            
cancelled      | 25.00          | Charlie Brown   | 1            
completed      | 150.00         | Alice Cooper    | 1            
pending        | 75.00          | Alice Cooper    | 1            
completed      | 500.00         | Diana Prince    | 1            
pending        | 40.00          | Charlie Brown   | 1
