rust/cube/cubesqlplanner/cubesqlplanner/src/tests/integration/snapshots/cubesqlplanner__tests__integration__modifiers__ungrouped_with_time_dimension.snap
---
source: cubesqlplanner/src/tests/integration/modifiers.rs
expression: result
---
orders__id | orders__status | orders__count
-----------+----------------+--------------
1          | completed      | 1            
2          | completed      | 1            
9          | pending        | 1
